# rs-mutenix-host

./: Cargo.toml  mutenix.yaml  temp.md
.github/workflows/: build.yml
lib-actions/: Cargo.toml
lib-actions/src/: lib.rs
lib-base/: Cargo.toml
lib-base/src/: config.rs  executor.rs  lib.rs  types.rs
lib-dev/: ADR.md  Cargo.toml  README.md
lib-dev/examples/: basic_usage.rs
lib-dev/src/: chunks.rs  constants.rs  device_messages.rs  device_update.rs  hid_commands.rs  hid_device.rs  lib.rs
lib-dev/tests/: chunks_tests.rs  device_messages_tests.rs  device_update_tests.rs  hid_commands_tests.rs
lib-teams/: Cargo.toml  README.md
lib-teams/examples/: basic_usage.rs
lib-teams/src/: lib.rs  state.rs  teams_messages.rs  websocket_client.rs
lib-teams/tests/: README.md  integration_tests.rs  websocket_client_tests.rs
lib-webdev/: Cargo.toml  README.md
lib-webdev/examples/: server.rs
lib-webdev/src/: emulator.rs  lib.rs  server.rs
mutenix-cli/: Cargo.toml  README.md
mutenix-cli/src/: actions.rs  app.rs  config.rs  main.rs  main.rs.backup  ui.rs
mutenix-ui/: .gitignore  Cargo.toml  README.md  tauri.conf.json
mutenix-ui/assets/: MuliMakroV2Logo.3mf  mutenix_logo_finallogo_vertical_square.eps  mutenix_logoicon_active.eps  mutenix_logoicon_all_red.eps  mutenix_logoicon_inactive.eps  mutenix_logologo_active.eps  mutenix_logologo_inactive.eps  mutenix_logologo_vertical.eps  mutenix_logologo_vertical_inactive.eps  mutenix_logologo_vertical_square.eps  mutenix_logologo_vertical_square_space.eps
mutenix-ui/icons/: README.md  icon.icns
mutenix-ui/src/: actions.rs  app.rs  index.html  main.rs
