[package]
name = "lib-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
teams-api = { path = "../lib-teams" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
enigo = "0.6"
reqwest = { version = "0.12", features = ["json"] }
