[package]
name = "mutenix-hid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2.0"
bytes = "1.9"

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.8"
