[package]
name = "teams-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
mockito = "1.5"
tokio-test = "0.4"
