[package]
name = "mutenix-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mutenix-hid = { path = "../lib-dev" }
teams-api = { path = "../lib-teams" }
lib-base = { path = "../lib-base" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
enigo = "0.6"
reqwest = { version = "0.12", features = ["json"] }
