[package]
name = "mutenix-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
mutenix-hid = { path = "../lib-dev" }
teams-api = { path = "../lib-teams" }
lib-base = { path = "../lib-base" }
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
enigo = "0.6"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
